# razer-x

./: App.xcf  Cargo.toml  readme.md  troubleshoot.md
app/: .gitignore  Cargo.toml  README.md  entitlements.plist  index.html  package.json  splashscreen.html  vite.config.ts
app/scripts/: build.sh  release.sh
app/src/: App.css  backup.1.txt  backup.2.txt  backup.3.txt  backup.txt  ior_error.rs  main.rs  main.tsx  not_bad.rs  razer.rs  services.ts  splashscreen-entry.tsx
app/src-tauri/: AppLogo.xcf  Cargo.toml  TrayIcon.xcf  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: handler.rs  lib.rs  main.rs  main_backup.txt  mouse.rs  types.rs
app/src-tauri/supported_devices/: BasiliskV3Pro.json
app/src/components/battery-status/: battery-status.tsx  index.ts
app/src/components/button/: index.ts  normal-button.tsx
app/src/components/checkbox/: checkbox.tsx  index.ts
app/src/components/device-manager/: device-manager.context.tsx  device-manager.hook.tsx  device-manager.provider.tsx  index.ts  types.ts
app/src/components/device-selector/: device-selector.tsx  index.ts
app/src/components/dpi-slider/: dpi-slider.tsx  index.ts
app/src/components/panel/: index.ts  panel.tsx
app/src/hooks/: _device-manager.tsx  device-manager.tsx  use-click-outside.tsx
app/src/routes/: __root.tsx  index.tsx  settings.tsx
app/src/utils/: debounce.ts  toast.tsx
app/src/views/: dpi-settings.tsx  general-settings.tsx  polling-rate-settings.tsx  rgb-settings.tsx
app_backup/: Cargo.toml
(+58 files in other folders)
