[package]
name = "app"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
driver = { path = "../../driver" }
razer = { path = "../../razer" }
tauri = { version = "2.9.5", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1.49.0", features = ["time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

